--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "@heroui/system": "^2.4.20",
     "@heroui/theme": "^2.4.20",
     "@hookform/resolvers": "^5.2.1",
+    "@imagekit/next": "^2.1.2",
     "@neondatabase/serverless": "^1.0.1",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "framer-motion": "^12.23.12",
+    "imagekit": "^6.0.0",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "uuid": "^11.1.0",
     "zod": "^4.0.17"
   },
   "devDependencies": {
